--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/express": "^1.3.21",
     "@sentry/node": "^8.42.0",
     "@sentry/profiling-node": "^8.42.0",
